# FileService

./: .env.example  Dockerfile  docker-compose.yml  init.sql  requirements.txt
.github/workflows/: ci.yml  python-app.yml
app/: main.py
app/cpp_module/: CMakeLists.txt  CMakeUserPresets.json  README.md  main.cpp
app/cpp_module/config/: config.template.json  generate_config.bat  generate_config.sh
app/cpp_module/controllers/: AuthController.cpp  AuthController.hpp  CMakeLists.txt  FileController.cpp  FileController.h
app/cpp_module/filters/: CMakeLists.txt  JWTAuthFilter.cpp  JWTAuthFilter.hpp
app/cpp_module/models/: CompressionTask.h  FileInfo.cpp  FileInfo.h
app/cpp_module/objects/: CMakeLists.txt  File.cpp  File.h
app/cpp_module/services/: CompressionService.hpp  CompressionStatsService.hpp
app/cpp_module/tests/: CMakeLists.txt  CacheManagerTest.cpp  CompressionUtilsTest.cpp
app/cpp_module/utils/: AsyncTaskManager.hpp  CMakeLists.txt  CacheManager.hpp  CompressionUtils.hpp  JWTUtils.cpp  JWTUtils.hpp
app/module_postgres/: database_controller.py  metadata.py  uuid_generator.py
tests/core_test/: test_validation.py
